# manipulator-scout

./: Dockerfile  README.md  pyproject.toml  renovate.json5
.ci/: build_docker_image.sh  build_package.sh  check_style.sh  run_docker_test.sh  run_tests.sh  validate_shellscripts.sh
.github/workflows/: docker-validate.yaml  main.yaml  python-package.yaml  python.yaml  script-validate.yaml
src/manipulator_scout/: __init__.py  app.py  manipulator.py  units.py
tests/: client.py  conftest.py  test_app.py  test_manipulator.py  test_units.py
