[project]
name = "manipulator_scout"
description = "Add your description here"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Nicolas Koller", email = "nicolas.koller@frontify.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["setuptools>=80", "setuptools_scm>=9"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
